[package]
name = "plum"
version = "0.1.5"
authors = ["onatm <onatmercan@gmail.com>"]
description = "Probabilistic data structures for rust"
documentation = "https://docs.rs/plum"
readme = "README.md"
keywords = ["bloom-filter", "bloomfilter", "bloom", "filter", "probabilistic"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-vec = "0.6"
